<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".IdatProjectActivity">

    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="@dimen/image_right_margin"
        android:src="@drawable/sqlite"
        android:contentDescription="@string/sqlite_titulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sqlite_titulo"
        android:textSize="@dimen/size_titulo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sqlite_subtitulo"
        android:textSize="@dimen/size_subtitulo"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:id="@+id/imageView2"
        android:src="@drawable/url"
        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:layout_marginRight="@dimen/image_right_margin"
        android:layout_marginTop="@dimen/image_top_margin"
        android:contentDescription="@string/url_titulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/url_titulo"
        android:id="@+id/textView3"
        android:textSize="@dimen/size_titulo"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/url_subtitulo"
        android:textSize="@dimen/size_subtitulo"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/url_hint"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:textOff="OFF"
        android:textOn="ON" />

    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:id="@+id/imageView3"
        android:src="@drawable/user"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/user_titulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_titulo"
        android:textSize="@dimen/size_titulo"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_subtitulo"
        android:textSize="@dimen/size_subtitulo"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:hint="@string/hint_user"
        android:layout_below="@+id/textView6"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:id="@+id/imageView4"
        android:src="@drawable/password"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/password_titulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_titulo"
        android:textSize="@dimen/size_titulo"
        android:id="@+id/textView7"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_subtitulo"
        android:textSize="@dimen/size_subtitulo"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:hint="@string/password_hint"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:id="@+id/imageView5"
        android:src="@drawable/sound"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/sound_titulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sound_titulo"
        android:textSize="@dimen/size_titulo"
        android:id="@+id/textView9"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />

</RelativeLayout>
